# nyka_surreal_client

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  _scratch  _scratch.json  _scratch.py  _scratch_.json
.devcontainer/: devcontainer.json
.github/actions/: action.yaml
.github/workflows/: build_docs.yaml  docker_build.yaml  repo_dispatch.yaml
examples/: _migrate.surql  connect_and_create.rs  discord.rs  migrate.rs  migrations.surql  person.rs  person.rs.no  person2.rs  person2.rs.no  person_u8_id.rs  queries.sql
src/: config.rs  creds.rs  deserialize_id.rs  error.rs  ident.rs  lib.rs  record.rs  storable.rs
src/live/: mod.rs
src/migrations/: db_queries.rs  mod.rs  stage1.bastion.surql  surreal.surql
src/nats_service/: mod.rs
src/surreal_client/: id.rs  mod.rs  value.rs
src/surreal_tower/: db_request.rs  db_service.rs  mod.rs
src/tests/: test_connect_and_create.rs
surrealql/: _migrate.surql  gc.surql
tests/: test_connect_and_create.rs  test_deserialize.rs  test_live.rs
