[package]
name = "nico_surreal_client"
version = "0.2.2"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "Cargo.lock"]
exclude = ["_scratch/"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
color-eyre = "0.6.2"
futures-lite = "2.2.0"
geo-types = "0.7.13"
once_cell = "1.19.0"
pin-project-lite = "0.2.13"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.1"
surrealdb = { version = "1.2.1", git = "https://github.com/surrealdb/surrealdb.git", ref = "v1.2.1", features = ["protocol-ws", "kv-mem"]}
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-tower = { version = "0.6.0", optional = true }
tower = { version = "0.4.13", optional = true }
rs-nico-tracing = { git = "git+ssh://git@github.com/BlueBastion/DEV-rs-nico-tracing.git" , branch = "master" , version = "0.2.0" }

# [dev-dependencies]
# color-eyre = "0.6.2"

[features]
tower = ["dep:tokio-tower", "dep:tower"]   

[dev-dependencies]
# surrealdb-migrations = "1.2.2"
# surrealdb = ["dep:surrealdb"]
