[package]
name = "nico_surreal_client"
version = "0.2.2"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "Cargo.lock"]
exclude = ["_scratch/", ".devcontainer", ".vscode", ".github", "logs"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
futures-lite = "2.2.0"
geo-types = "0.7.13"
once_cell = "1.19.0"
pin-project-lite = "0.2.13"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.1"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
lazy_static = "1.4.0"
surrealdb = "1.4.2"
bb-config = { version = "0.1.0", git = "git+ssh://git@github.com/BlueBastion/DEV-BB-Config.git", features = ["surreal"]}

